freest/test/prog/Invalid/Kinding/ProperKindMismatchParam/ProperKindMismatchParam.fst
module ProperKindMismatchParam where

type Foo : *T -> *T
type Foo a = a

foo = (\(x : Foo) -> 1)